# gamez

./: Cargo.toml
shaders/: arrow.wgsl  border.wgsl  compute.wgsl  joint.wgsl  mouse.wgsl  shader.wgsl  simulation.wgsl
src/: app.rs  arrow_renderer.rs  border_renderer.rs  camera_uniform.rs  joint_renderer.rs  main.rs  mouse_renderer.rs  mouse_uniform.rs  simulation.rs  simulation_renderer.rs  timer.rs  wgpu_utils.rs
src/newapp/: application.rs  application_handler.rs  application_state.rs  mod.rs  profiler.rs  watch_file.rs
src/newapp/engine/: winit.rs
src/newapp/gpu_simulation/: mod.rs  simulation_uniform.rs
src/newapp/rendering/: camera_uniform.rs  mod.rs  simulation.rs  square_mesh.rs
src/newapp/simulation/: box_constraint.rs  integrator.rs  mod.rs  sorted_store.rs
src/newapp/simulation/spatial_hash/: fixed_size_grid.rs  mod.rs  pointer_hash.rs  sorting_hash.rs
src/newapp/utils/: mod.rs  wgpu_profiler.rs
src/rand/: mod.rs
