[package]
name = "gamez"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
egui = "0.29.1"
egui-wgpu = { version = "0.29.1", features = ["winit"] }
egui-winit = "0.29.1"
glam = { version = "0.29.2", features = ["bytemuck"] }
libc = "0.2.169"
notify = "7.0.0"
pollster = "0.4.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
wgpu = "23.0.1"
winit = "0.30.5"
