[package]
name = "gamez"
version = "0.1.0"
edition = "2021"

# [profile.release]
# strip = true # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.20.0", features = ["derive"] }
egui = "0.29.1"
egui-wgpu = { version = "0.29.1", features = ["winit"] }
egui-winit = "0.29.1"
glam = { version = "0.29.2", features = ["bytemuck"] }
image = "0.25.5"
itertools = "0.14.0"
libc = "0.2.169"
notify = "7.0.0"
pollster = "0.4.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
wgpu = "23.0.1"
winit = "0.30.5"
